Improved handling of cases when seq_id column of edge_event table started new cycle